remove slugs and replace name with title

--- a/ConfiguringDeployments.mdx
+++ b/ConfiguringDeployments.mdx
@@ -1,6 +1,5 @@
 ---
-name: "Configuring Deployments"
-slug: "/configuring-deployments"
+title: "Configuring Deployments"
 tags: ["documentation", "configuration"]
 ---
 
