--- a/DeployingProject.mdx
+++ b/DeployingProject.mdx
@@ -1,6 +1,5 @@
 ---
-name: "Deploying Your Project"
-slug: "deploying-project"
+title: "Deploying Your Project"
 tags: ["documentation", "deployment"]
 ---
 
