--- a/PaymentAndCryptocurrency.mdx
+++ b/PaymentAndCryptocurrency.mdx
@@ -1,6 +1,5 @@
 ---
-name: "Payment and Cryptocurrency"
-slug: "/payment-and-cryptocurrency"
+title: "Payment and Cryptocurrency"
 tags: ["documentation", "payment", "cryptocurrency"]
 ---
 
