--- a/ProviderGuide.mdx
+++ b/ProviderGuide.mdx
@@ -1,6 +1,5 @@
 ---
-name: "Provider Guide"
-slug: "/provider-guide"
+title: "Provider Guide"
 tags: ["documentation", "provider", "edge computing"]
 ---
 
