change deploy project docs

--- a/Deploying Project.mdx
+++ b/Deploying Project.mdx
@@ -7,18 +7,22 @@ tags: ["documentation", "deployment"]
 
 ## Upload Your Project
 
-In the "Deployfile" section, you have the option to upload your project directly. Simply select your project files and let Sidra Edge handle the rest.
+In the "Deployfile" section, you have the option to upload your project directly to Sidra Edge. Simply select your project files and let Sidra Edge handle the rest.
 
 ## Choose a Template
 
-Explore our extensive collection of templates to find the perfect fit for your project. Whether you're building a website, app, or service, we've got you covered.
+Explore our extensive collection of [templates](https://sidraedge.com/templates) to find the perfect fit for your project. Whether you're building a website, app, or service, we've got you covered.
 
 ## GitHub Integration
 
-Connect your GitHub repository to Sidra Edge and deploy your project directly from your repository. It's a seamless process that saves you time and effort.
+Connect your GitHub repository to Sidra Edge and deploy your project directly from your repository. It's a seamless process that saves you time and effort. Learn more about our [GitHub integration](https://sidraedge.com/github-integration).
 
 ## Custom Configurations
 
-Want to tweak some settings? No problem! Customize your deployment with options such as domain name, project name, and operating system.
+Want to tweak some settings? No problem! Customize your deployment with options such as:
 
-With Sidra Edge, deploying your project has never been easier!
+- **Domain Name:** Set a custom domain name for your project.
+- **Project Name:** Specify a unique name for your deployed project.
+- **Operating System:** Choose the operating system environment for your deployment.
+
+With **Sidra Edge**, deploying your project has never been easier! Check out our [documentation](https://sidraedge.com/docs) for more details.
