organized using folders

--- a/Cloud Services and architecteur/architecteur.mdx
+++ b/Cloud Services and architecteur/architecteur.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Introduction"
-tags: ["documentation", "overview"]
+title: "Private cloud"
+tags: ["cloud"]
 ---
 
-# Welcome to Sidra Edge Documentation!
+# how to get more!
 
 ## Introduction
 
