--- a/Wallets/4-BuyersWallet.mdx
+++ b/Wallets/4-BuyersWallet.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Configuring Deployments"
-tags: ["documentation", "configuration"]
+title: "Buyers Wallet"
+tags: ["Buyer's user guide"]
 ---
 
 # Configuring Deployments
