--- a/Wallets/PaymentAndCryptocurrency.mdx
+++ b/Wallets/PaymentAndCryptocurrency.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Payment and Cryptocurrency"
-tags: ["documentation", "payment", "cryptocurrency"]
+tags: ["payment"]
 ---
 
 # Payment and Cryptocurrency
