--- a/Cloud Services and architecteur/Private cloud.mdx
+++ b/Cloud Services and architecteur/Private cloud.mdx
@@ -5,11 +5,7 @@ tags: ["cloud"]
 
 # how to get more!
 
-## Introduction
-
-Sidra Edge is a cutting-edge platform that facilitates the deployment of projects seamlessly. Whether you're an individual developer or a business looking to expand your computing capabilities, Sidra Edge offers a versatile solution.
-
-## Purpose of Documentation
+## Cloud
 
 This documentation serves as a comprehensive guide to help you navigate through the features and functionalities of Sidra Edge. From getting started to troubleshooting common issues, you'll find everything you need right here.
 
