add a video component

--- a/Buyer's user guide/Account Settings.mdx
+++ b/Buyer's user guide/Account Settings.mdx
@@ -7,6 +7,8 @@ tags: ["Buyer's user guide"]
 
 ## Domain Name
 
+<Video id="3hScMLH7B4o" />
+
 Choose a custom domain name for your project to make it easily accessible to your users. You can either use your own domain or set up a subdomain through Sidra Edge.
 
 ## Project Name
