--- a/Buyer's user guide/Using Templates.mdx
+++ b/Buyer's user guide/Using Templates.mdx
@@ -7,6 +7,11 @@ tags: ["documentation", "templates"]
 
 ## Template Library
 
+<CustomImage
+  src="https://raw.githubusercontent.com/NourEssalam/sidra-edge-documentations/main/images/temp4.jpeg"
+  alt="template screenshot for templates documentaion"
+/>
+
 Our template library offers a diverse range of options to kickstart your projects. From basic setups to advanced configurations, you'll find everything you need to get started.
 
 ## Search Functionality
